--- a/src/app/components/blog-item/blog-item.html
+++ b/src/app/components/blog-item/blog-item.html
@@ -1,6 +1,5 @@
 <div class="card shadow-sm">
 
-  <!-- IMAGE -->
   <blog-item-image
     *ngIf="image"
     [image]="image"
@@ -9,7 +8,6 @@
 
   <div class="card-body d-flex flex-column">
 
-    <!-- TITLE + LIKE -->
     <div class="d-flex justify-content-between align-items-start mb-2">
       <h5 class="card-title mb-0">
         {{ title }}
@@ -28,26 +26,23 @@
       </div>
     </div>
 
-    <!-- RATING -->
     <div class="rating-box mb-2">
       <app-rating [postId]="postId"></app-rating>
     </div>
 
-    <!-- TEXT -->
     <blog-item-text
       [text]="text"
       [id]="postId"
       (more)="goToDetails()">
     </blog-item-text>
 
-    <!-- AUTHOR ACTIONS -->
     @if (isAuthor()) {
       <div class="d-flex gap-2 mt-auto pt-3">
         <button
           type="button"
           class="btn btn-sm btn-outline-primary"
           (click)="editPost()">
-          ✏️ Edytuj
+          Edytuj
         </button>
 
         <button
