--- a/src/app/components/blog-item-details/blog-item-details.html
+++ b/src/app/components/blog-item-details/blog-item-details.html
@@ -22,6 +22,14 @@
       <p class="card-text">
         {{ post.text }}
       </p>
+
+      <hr>
+
+      <comments-section
+        *ngIf="post"
+        [postId]="post.id">
+      </comments-section>
+
     </div>
   </div>
 </div>
